<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="prefMakeFilesWritable">Write directly to files</string>
    <string name="prefMakeFilesWritableLong">Write directly to the sysfs files.  This speeds up switching and solves problems with Jelly Bean.  But it is known to cause problems with some kernels.</string>
    <string name="prefAuthorsSettings">Use the authors settings</string>
    <string name="prefAuthorsSettingsLong">Use the settings that the authors perfers.  This might yield behavour which is not expected or enable stuff that does not quite work on your device.  It does not reset all values, but changes only a few settings to my inoffical default. Use with caution…!</string>
    <string name="mse_authors_settings_loaded">Authors settings loaded!</string>
    <string name="dia_title_switch_off_cpus">Switch off CPUs?</string>
    <string name="prefWidgetUI">Displayed Information</string>
    <string name="prefShowIcon">CPU Tuner icon</string>
    <string name="prefShowIconLong">Used to launch CPU Tuner</string>
    <string name="prefCatWidget">Widget</string>
    <string name="prefHasWidget">Enable Widget</string>
    <string name="prefCatEngine">Engine</string>
    <string name="prefCatHelper">Helper</string>
    <string name="prefCatAdvStatistics">Advanced Statistics and Logging</string>
    <string name="prefCatExtention">Extention</string>
    <string name="prefEnableExtention">Enable Extension</string>
    <string name="prefEnableSwitchLog">Enable profile switch log</string>
    <string name="prefCatStatistics">Statistics</string>
    <string name="prefEnableStatistics">Enable statistics</string>
    <string name="prefLogPulse">Log pulse to switch log</string>
    <string name="prefLogPulseOn">Pulses get logged in the profie switch log</string>
    <string name="prefLogPulseOff">Pulses do not get logged in the profie switch log</string>
    <string name="prefProfileSwitchLogSizeLong">How many hours should the profile switch log contain. Use -1 to log for ever.</string>
    <string name="prefMaxFreq">Default Maximum Frequency</string>
    <string name="prefMaxFreqLong">The maximum frequency to be applied when loading system configurations.</string>
    <string name="prefMinFreq">Default Minimum Frequency</string>
    <string name="prefMinFreqLong">The minimum frequency to be applied when loading system configurations.</string>
    <string name="prefKeyFrequencies">Frequencies for system configurations</string>
    <string name="labelLogTab">Profile Switch Log</string>
    <string name="prefCatGUILong">Change display settings.</string>
    <string name="prefCatSystemLong">Change the way it works.</string>
    <string name="prefBuyMeABeerLong">This will make me happy.</string>
    <string name="prefVariousLong">Informations about CPU Tuner.</string>
    <string name="prefConfigurationsManageLong">Backup and Restore configurations (i.e. a set of
		triggers, profiles and governors).</string>
    <string name="prefConfigurationsAutoLoadLong">Load configurations based on time and weekday.</string>
    <string name="prefLanguageLong">Choose a different language. (required restart)</string>
    <string name="prefEnableCputunerOn">CPU Tuner is running.</string>
    <string name="prefEnableCputunerOff">CPU Tuner is not running.</string>
    <string name="prefKeyProfilesLong">Change the way profiles, triggers and governors behave.</string>
    <string name="prefServiceSwitchesLong">Change the way service switches (e.g. mobile, date, WIFI, or bluetooth) behave.</string>
    <string name="prefCpuLong">Settings concerning the CPU.</string>
    <string name="prefLegalServiceIcons">Service icons License</string>
    <string name="prefLegalServiceIconsLong">License of the used service icons from cyanogenmod.
		Thanks for the nice icons.</string>
    <string name="title_extentions">Extensions</string>
    <string name="prefextentionsLong">Add new features to CPU Tuner.</string>
    <string name="prefInitialPulseDelay">Initial Pulse Delay</string>
    <string name="prefInitialPulseDelayLong">Wait for some time (in s) bevore starting the first pulse.</string>
    <string name="prefInitialPulseDelayMsg">Delay time in seconds</string>
    <string name="prefNetworkModeOnWifiConnected">Netmode on WIFI Connection</string>
    <string name="prefNetworkModeOnWifiConnectedLong">Choose network mode to apply if a WIFI network is connected.  If the network is disconnected, CPU Tuner goes back to previous.</string>
    <string name="prefMulticore">Use Multicore CPU Features</string>
    <string name="prefEnableCputuner">Enable CPU Tuner</string>
    <string name="prefMulticoreLong">Choose if tuning should be applied to all cores</string>
    <string name="prefConfigurationsLong">Backup and Restore (and more) ...</string>
    <string name="prefCpu">CPU Settings</string>
    <string name="prefChangelog">Show Changelog</string>
    <string name="prefLegalGnomeIcons">Main icon License</string>
    <string name="prefLegalGnomeIconsLong">License of the used gnome icon. Thanks for the
		nice icons.</string>
    <string name="prefConfigurationsSettings">Configurations Settings</string>
    <string name="prefSaveConfigOnSwitch">Save Configuration</string>
    <string name="prefSaveConfigOnSwitchFull">Save changes to profiles, triggers or governors to the current configuration.</string>
    <string name="prefConfigurationsManage">Manage Configurations</string>
    <string name="prefConfigurationsAutoLoad">Autoload Configurations</string>
    <string name="prefProfileSwitchLogSize">Profile switch log size</string>
    <string name="prefConfigurations">Configurations</string>
    <string name="prefScreenLegal">Legal stuff</string>
    <string name="prefCatGUI">User Interface</string>
    <string name="prefCatDisplay">Display</string>
    <string name="labelPowersaveBias">Powersave bias:</string>
    <string name="prefUseVirtualGovernorsLong">Virtual Governor abstract the settings of governors
		from the profile.</string>
    <string name="prefPulseMobiledataOnWifi">Pulse Mobile Data on WIFI</string>
    <string name="prefPulseMobiledataOnWifiOn">Mobiledata connection will pulse even if WIFI is
		connected.</string>
    <string name="prefPulseMobiledataOnWifiOff">Mobiledata will not be pulsed while the device is
		connected to a WIFI lan.</string>
    <string name="prefLanguage">Choose Language</string>
    <string name="labelScript">Script:</string>
    <string name="hintScriptToRun">Script to run after governor change.</string>
    <string name="prefEnableUserspaceGovernor">Show Userspace Governor</string>
    <string name="prefEnableUserspaceGovernorOn">It is possible to choose the Userspace Governor</string>
    <string name="prefEnableUserspaceGovernorOff">The Userspace Governor will be filtered.</string>
    <string name="prefCatPulsedServiceSwitches">Pulsed Service Switches</string>
    <string name="prefPulseDelayOn">Service On-Time</string>
    <string name="prefPulseDelayOnLong">The time (in minutes) a service is on while in
		pulsed mode.</string>
    <string name="prefPulseDelayOff">Service Off-Time</string>
    <string name="prefPulseDelayOffLong">The time (in minutes) a service is off while in
		pulsed mode.</string>
    <string name="labelSettingsTab">Settings</string>
    <string name="labelGovernor">Governor:</string>
    <string name="labelServices">Services:</string>
    <string name="labelDown">Down:</string>
    <string name="labelThreshsUp">Thresholds: Up:</string>
    <string name="labelBuFindFeq">Find frequencies (beta only)</string>
    <string name="msgNoEmail">Please do not write empty e-mails…</string>
    <string name="labelResult">Result</string>
    <string name="labelCheck">Check</string>
    <string name="labelAppVersion">CPU Tuner version:</string>
    <string name="msgNoIssuesFound">No issues found.</string>
    <string name="prefBatteryHotTempMsg">Set temperature to trigger \"Battery Hot\" profile.<br />		Integer value in °C.</string>
    <string name="prefBatteryHotTempLong">Set temperature to trigger \"Battery Hot\" profile.</string>
    <string name="prefBatteryHotTemp">Battery Hot Temperature</string>
    <string name="prefSwitchProfileWhilePhoneNotIdleOn">If checked, \"Profile Switches\" are [allowed] during phone calls. Mobile Data will never be switched during phone calls, regardless of the state of this option.</string>
    <string name="prefSwitchProfileWhilePhoneNotIdleOff">If unchecked, \"Profile Switches\" are [forbidden] during phone calls. Mobile Data will never be switched during phone calls, regardless of the state of this option.</string>
    <string name="prefSwitchProfileWhilePhoneNotIdle">Switch Profile During Call</string>
    <string name="prefSwitchWifiOnConnectedNetworkOn">If checked, WIFI will be switched \"off\" even if connected to a WIFI network.</string>
    <string name="prefSwitchWifiOnConnectedNetworkOff">If unchecked, WIFI will not be switched \"off\" if connected to a WIFI network.</string>
    <string name="prefSwitchWifiOnConnectedNetwork">Switch WIFI if connected.</string>
    <string name="prefServiceSwitches">Service Switches</string>
    <string name="prefUserLevelLong">Determines how difficult the settings are, and how
		much you can interfere.</string>
    <string name="prefUserLevel">Experience Level</string>
    <string name="prefVarious">Various</string>
    <string name="prefMinSensibleFrequencyLong">Minimum displayed frequency if not in Power User
		mode.</string>
    <string name="prefMinSensibleFrequency">Minimum Displayed Frequency</string>
    <string name="prefKeyProfiles">Profiles and Triggers</string>
    <string name="prefBuyMeABeer">Buy me a beer.</string>
    <string name="prefAllowManualServiceChangesOn">If checked, do not change the state of a service if it was modified as long as no trigger changed took place.</string>
    <string name="prefAllowManualServiceChangesOff">If uncheck, do change the state of a service regardless if it was modified manually.</string>
    <string name="prefAllowManualServiceChanges">Manual Service Changes</string>
    <string name="prefCpuFreqMsg">Space separated list of frequencies</string>
    <string name="prefCpuFreq">Allowed CPU frequencies</string>
    <string name="prefCpuFreqLong">Leave empty if unsure…!</string>
    <string name="prefKeyCalcPowerUsageLong">May consume battery.</string>
    <string name="prefKeyCalcPowerUsage">Calculate Power Usage</string>
    <string name="prefEnableBetaMessage">Enable some features which are in beta state.</string>
    <string name="prefEnableBeta">Enable Beta Features</string>
    <string name="prefCapabilitiesLong">Check if the devices supports API needed or if
		there are any issues.</string>
    <string name="prefCapabilities">Check Capabilities</string>
    <string name="prefStatusbarAddTo">Status Bar Notifications</string>
    <string name="prefStatusbarNotificationsOff">If unchecked, messages will not be shown in status bar for profile changes.</string>
    <string name="prefKeyEnableProfilesOn">If checked, messages will be shown in status bar for profile changes.</string>
    <string name="prefStatusbarNotifications">Status Bar Notifications</string>
    <string name="prefCatNotifications">Notifications</string>
    <string name="prefCatSystem">Backend</string>
    <string name="labelCpuGov">Governor:</string>
    <string name="labelCurrentTrigger">Trigger:</string>
    <string name="labelCurrentProfile">Profile:</string>
    <string name="labelCurrentBattery">Battery:</string>
    <string name="spinnerPromptGov">Select governor</string>
    <string name="cbEnableVirtualGovernors">Enable Virtual Governors</string>
    <string name="prefCallInProgressProfile">Call-In Progress Profile</string>
    <string name="prefCallInProgressProfileLong">Enables a profile that is triggered during phone
		calls.</string>
</resources>