<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="prefKeyProfiles"
	android:title="@string/prefKeyProfiles"
	android:summary="@string/prefKeyProfilesLong"
>
	<CheckBoxPreference
		android:title="@string/prefCallInProgressProfile"
		android:key="prefKeyCallInProgressProfile"
		android:summary="@string/prefCallInProgressProfileLong"
		android:enabled="true"
		android:defaultValue="true" 
	></CheckBoxPreference>
	<CheckBoxPreference
		android:key="prefKeyUseVirtualGovernors"
		android:summary="@string/prefUseVirtualGovernorsLong"
		android:title="@string/cbEnableVirtualGovernors"
		android:defaultValue="true"
	></CheckBoxPreference>
	<CheckBoxPreference
		android:key="prefKeySwitchProfileWhilePhoneNotIdle"
		android:summaryOff="@string/prefSwitchProfileWhilePhoneNotIdleOff"
		android:summaryOn="@string/prefSwitchProfileWhilePhoneNotIdleOn"
		android:title="@string/prefSwitchProfileWhilePhoneNotIdle"
		android:defaultValue="false"
	></CheckBoxPreference>
	<EditTextPreference
		android:title="@string/prefBatteryHotTemp"
		android:key="prefKeyBatteryHotTemp"
		android:dialogMessage="@string/prefBatteryHotTempMsg"
		android:dialogTitle="@string/prefBatteryHotTemp"
		android:summary="@string/prefBatteryHotTempLong"
	></EditTextPreference>
</PreferenceScreen>